# cmake-central-registry

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
cmake/: CCR.cmake
examples/basic_project/: CMakeLists.txt
examples/basic_project/cmake/: Dependencies.cmake
examples/basic_project/src/: main.cpp
examples/basic_project/tests/: test_main.cpp
examples/fmt_spdlog_demo/: CMakeLists.txt  README.md
examples/fmt_spdlog_demo/cmake/: Dependencies.cmake
examples/fmt_spdlog_demo/src/: main.cpp
scripts/: validate.py
